<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/patientinfo_border"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_act_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Activity Type"
                    android:textColor="#000000"
                    android:textSize="13sp" />

                <Spinner
                    android:id="@+id/spinner_act_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="#888888" />
            </LinearLayout>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_bg"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="Record Data"
                    android:textColor="#000000"
                    android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#ff666666"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_analyzing"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_bg_run"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="5dp"
                    android:text="Analyze"
                    android:textColor="#000000"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/btn_plotting"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_bg_download"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="Plot"
                    android:textColor="#000000"
                    android:textSize="13sp" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="Group 15"
            android:textSize="14sp"
            android:textColor="#ffffff" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/plot_display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></FrameLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/lable_eating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="Eating: "
                android:textColor="@color/red"
                android:textSize="12sp" />

            <View
                android:layout_width="25dp"
                android:layout_height="1dp"
                android:layout_toRightOf="@+id/lable_eating"
                android:layout_alignBottom="@+id/lable_eating"
                android:layout_marginBottom="5dp"
                android:background="@color/red" />

            <TextView
                android:id="@+id/lable_walking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lable_eating"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:text="Walking: "
                android:textColor="@color/green"
                android:textSize="12sp" />

            <View
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:layout_toRightOf="@+id/lable_walking"
                android:layout_alignBottom="@+id/lable_walking"
                android:layout_marginBottom="5dp"
                android:background="@color/green" />

            <TextView
                android:id="@+id/lable_running"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lable_walking"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:text="Running: "
                android:textColor="@color/blue"
                android:textSize="12sp" />
            <View
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:layout_toRightOf="@+id/lable_running"
                android:layout_alignBottom="@+id/lable_running"
                android:layout_marginBottom="5dp"
                android:background="@color/blue" />
        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/analysis_display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/parameter1"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="#fff"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parameter2"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="#fff"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parameter3"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="#fff"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parameter4"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="#fff"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parameter5"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="#fff"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parameter6"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="#fff"/>
    </LinearLayout>

</LinearLayout>